--- a/APIUsuario/APIUsuario.csproj
+++ b/APIUsuario/APIUsuario.csproj
@@ -15,5 +15,9 @@
     <ProjectReference Include="..\Model\Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DAO\" />
+  </ItemGroup>
+
 
 </Project>
